--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "mongoskin": "~0.6.0",
     "redis": "~0.11.0",
     "express-namespace": "~0.1.1",
-    "express": "~4.6.1"
+    "express": "~4.6.1",
+    "config": "~1.0.1",
+    "winston": "~0.7.3",
+    "errorhandler": "~1.1.1"
   },
   "devDependencies": {},
   "scripts": {
