--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "~4.6.1",
     "config": "~1.0.1",
     "winston": "~0.7.3",
-    "errorhandler": "~1.1.1"
+    "errorhandler": "~1.1.1",
+    "body-parser": "~1.5.0"
   },
   "devDependencies": {},
   "scripts": {
