--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "config": "~1.0.1",
     "winston": "~0.7.3",
     "errorhandler": "~1.1.1",
-    "body-parser": "~1.5.0"
+    "body-parser": "~1.5.0",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {},
   "scripts": {
