--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "winston": "~0.7.3",
     "errorhandler": "~1.1.1",
     "body-parser": "~1.5.0",
-    "underscore": "^1.6.0"
+    "underscore": "^1.6.0",
+    "passport": "~0.2.0",
+    "cookie-parser": "~1.3.2",
+    "passport-local": "~1.0.0",
+    "request": "~2.39.0",
+    "querystring": "~0.2.0",
+    "jquery": "~2.1.1"
   },
   "devDependencies": {},
   "scripts": {
