--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "passport-local": "~1.0.0",
     "request": "~2.39.0",
     "querystring": "~0.2.0",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "MD5": "~1.2.1"
   },
   "devDependencies": {},
   "scripts": {
