--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "querystring": "~0.2.0",
     "jquery": "~2.1.1",
     "MD5": "~1.2.1",
-    "baidu-map": "~0.1.0"
+    "baidu-map": "~0.1.0",
+    "jwt-simple": "~0.2.0"
   },
   "devDependencies": {},
   "scripts": {
