--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jquery": "~2.1.1",
     "MD5": "~1.2.1",
     "baidu-map": "~0.1.0",
-    "jwt-simple": "~0.2.0"
+    "jwt-simple": "~0.2.0",
+    "js-yaml": "~3.1.0"
   },
   "devDependencies": {},
   "scripts": {
