--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "passport-local": "~1.0.0",
     "request": "~2.39.0",
     "querystring": "~0.2.0",
-    "jquery": "~2.1.1",
     "MD5": "~1.2.1",
     "baidu-map": "~0.1.0",
     "jwt-simple": "~0.2.0",
-    "js-yaml": "~3.1.0"
+    "js-yaml": "~3.1.0",
+    "nib": "~1.0.3",
+    "gulp": "~3.8.6",
+    "gulp-jade": "~0.7.0",
+    "gulp-stylus": "~1.3.0"
   },
   "devDependencies": {},
   "scripts": {
