--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ccar",
   "version": "1.0.0",
-  "description": "",
+  "description": "CCMeiChe",
   "main": "app.js",
   "dependencies": {
     "connect-redis": "~2.0.0",
@@ -27,7 +27,8 @@
     "nib": "~1.0.3",
     "gulp": "~3.8.6",
     "gulp-jade": "~0.7.0",
-    "gulp-stylus": "~1.3.0"
+    "gulp-stylus": "~1.3.0",
+    "jade": "~1.5.0"
   },
   "devDependencies": {},
   "scripts": {
