--- a/public/package.json
+++ b/public/package.json
@@ -2,7 +2,7 @@
   "name": "ccmeiche-static",
   "version": "0.1.0",
   "description": "static files for ccmeiche",
-  "main": "index.js",
+  "main": "app.js",
   "repository": "git://github.com/uicestone/CCMeiChe.git",
   "keywords": [
     "ccmeiche"
