--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp": "~3.8.6",
     "gulp-jade": "~0.7.0",
     "gulp-stylus": "~1.3.0",
-    "jade": "~1.5.0"
+    "jade": "~1.5.0",
+    "gulp-tpl2mod": "~0.1.1"
   },
   "devDependencies": {},
   "scripts": {
