--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "baidu-map": "~0.1.0",
     "jwt-simple": "~0.2.0",
     "js-yaml": "~3.1.0",
+    "jade": "~1.5.0",
+    "qiniu": "~6.1.5"
+  },
+  "devDependencies": {
     "nib": "~1.0.3",
     "gulp": "~3.8.6",
     "gulp-jade": "~0.7.0",
     "gulp-stylus": "~1.3.0",
-    "jade": "~1.5.0",
     "gulp-tpl2mod": "~0.1.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
