--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jade": "~1.5.0",
     "qiniu": "~6.1.5",
     "wechat": "~0.8.8",
-    "async": "^0.9.0"
+    "async": "^0.9.0",
+    "moment": "^2.8.1"
   },
   "devDependencies": {
     "nib": "~1.0.3",
