--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "wechat": "~0.8.8",
     "async": "^0.9.0",
     "moment": "^2.8.1",
-    "uuid": "^1.4.1"
+    "uuid": "^1.4.1",
+    "colors": "^0.6.2"
   },
   "devDependencies": {
     "nib": "~1.0.3",
