--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "async": "^0.9.0",
     "moment": "^2.8.1",
     "uuid": "^1.4.1",
-    "colors": "^0.6.2"
+    "colors": "^0.6.2",
+    "han": "0.0.7"
   },
   "devDependencies": {
     "nib": "~1.0.3",
