--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "gulp": "~3.8.6",
     "gulp-jade": "~0.7.0",
     "gulp-stylus": "~1.3.0",
-    "gulp-tpl2mod": "~0.1.1"
+    "gulp-tpl2mod": "~0.1.1",
+    "gulp-uglify": "^1.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
