--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "cookie-parser": "~1.3.2",
     "passport-local": "~1.0.0",
     "request": "~2.39.0",
-    "querystring": "~0.2.0",
-    "MD5": "~1.2.1",
     "baidu-map": "~0.1.0",
     "jwt-simple": "~0.2.0",
     "js-yaml": "~3.1.0",
@@ -31,7 +29,9 @@
     "moment": "^2.8.1",
     "uuid": "^1.4.1",
     "colors": "^0.6.2",
-    "han": "0.0.7"
+    "han": "0.0.7",
+    "random-js": "^1.0.4",
+    "jshashes": "^1.0.5"
   },
   "devDependencies": {
     "nib": "~1.0.3",
