--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "gulp-jade": "~0.7.0",
     "gulp-stylus": "~1.3.0",
     "gulp-tpl2mod": "~0.1.1",
-    "gulp-uglify": "^1.0.1"
+    "gulp-uglify": "^1.0.1",
+    "chai": "^1.9.1",
+    "mocha": "^1.21.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
