--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "uuid": "^1.4.1",
     "colors": "^0.6.2",
     "han": "0.0.7",
-    "random-js": "^1.0.4",
-    "jshashes": "^1.0.5",
     "wechat-payment": "0.0.5"
   },
   "devDependencies": {
@@ -42,7 +40,8 @@
     "gulp-tpl2mod": "~0.1.1",
     "gulp-uglify": "^1.0.1",
     "chai": "^1.9.1",
-    "mocha": "^1.21.4"
+    "mocha": "^1.21.4",
+    "node-notifier": "^3.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
