--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "winston": "~0.7.3",
     "errorhandler": "~1.1.1",
     "body-parser": "~1.5.0",
-    "underscore": "^1.6.0",
+    "underscore": "^1.7.0",
     "passport": "~0.2.0",
     "cookie-parser": "~1.3.2",
     "passport-local": "~1.0.0",
-    "request": "~2.39.0",
+    "request": "^2.39.0",
     "baidu-map": "~0.1.0",
     "jwt-simple": "~0.2.0",
     "js-yaml": "~3.1.0",
@@ -30,8 +30,8 @@
     "uuid": "^1.4.1",
     "colors": "^0.6.2",
     "han": "0.0.7",
-    "wechat-payment": "https://github.com/supersheep/wechat-payment/tarball/master",
-    "MD5": "^1.2.1"
+    "MD5": "^1.2.1",
+    "wechat-pay": "https://github.com/supersheep/wechat-pay/tarball/master",
   },
   "devDependencies": {
     "nib": "~1.0.3",
