--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "colors": "^0.6.2",
     "han": "0.0.7",
     "MD5": "^1.2.1",
-    "wechat-pay": "https://github.com/supersheep/wechat-pay/tarball/master",
+    "wechat-pay": "https://github.com/supersheep/wechat-pay/tarball/master"
   },
   "devDependencies": {
     "nib": "~1.0.3",
