--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "MD5": "^1.2.1",
     "wechat-pay": "^0.1.0",
     "express-di": "^4.1.1",
+    "point-in-polygon": "0.0.0",
     "tracer": "~0.7.3"
   },
   "devDependencies": {
