--- a/package.json
+++ b/package.json
@@ -4,37 +4,38 @@
   "description": "CCMeiChe",
   "main": "app.js",
   "dependencies": {
-    "connect-redis": "~2.0.0",
-    "express-session": "~1.7.0",
-    "mongoskin": "~0.6.0",
-    "redis": "~0.11.0",
-    "express-namespace": "~0.1.1",
-    "express": "~4.6.1",
-    "config": "~1.0.1",
-    "winston": "~0.7.3",
-    "errorhandler": "~1.1.1",
-    "body-parser": "~1.5.0",
-    "underscore": "^1.7.0",
-    "passport": "~0.2.0",
-    "cookie-parser": "~1.3.2",
-    "passport-local": "~1.0.0",
-    "request": "^2.39.0",
-    "baidu-map": "~0.1.0",
-    "jwt-simple": "~0.2.0",
-    "js-yaml": "~3.1.0",
-    "jade": "~1.5.0",
-    "qiniu": "~6.1.5",
-    "wechat": "~0.8.8",
-    "async": "^0.9.0",
-    "moment": "^2.8.1",
-    "uuid": "^1.4.1",
-    "colors": "^0.6.2",
-    "han": "0.0.7",
     "MD5": "^1.2.1",
-    "wechat-pay": "^0.1.0",
+    "async": "^0.9.0",
+    "baidu-map": "~0.1.0",
+    "body-parser": "~1.5.0",
+    "colors": "^0.6.2",
+    "compression": "^1.2.0",
+    "config": "~1.0.1",
+    "connect-redis": "~2.0.0",
+    "cookie-parser": "~1.3.2",
+    "errorhandler": "~1.1.1",
+    "express": "~4.6.1",
     "express-di": "^4.1.1",
+    "express-namespace": "~0.1.1",
+    "express-session": "~1.7.0",
+    "han": "0.0.7",
+    "jade": "~1.5.0",
+    "js-yaml": "~3.1.0",
+    "jwt-simple": "~0.2.0",
+    "moment": "^2.8.1",
+    "mongoskin": "~0.6.0",
+    "passport": "~0.2.0",
+    "passport-local": "~1.0.0",
     "point-in-polygon": "0.0.0",
-    "tracer": "~0.7.3"
+    "qiniu": "~6.1.5",
+    "redis": "~0.11.0",
+    "request": "^2.39.0",
+    "tracer": "~0.7.3",
+    "underscore": "^1.7.0",
+    "uuid": "^1.4.1",
+    "wechat": "~0.8.8",
+    "wechat-pay": "^0.1.0",
+    "winston": "~0.7.3"
   },
   "devDependencies": {
     "nib": "~1.0.3",
