新增每月工时及完成订单数excel报表下载

--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "jwt-simple": "~0.2.0",
     "moment": "^2.8.1",
     "mongoskin": "~0.6.0",
+    "node-xlsx": "^0.5.1",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
     "point-in-polygon": "0.0.0",
     "qiniu": "~6.1.5",
     "redis": "~0.11.0",
     "request": "^2.39.0",
+    "temp": "^0.8.1",
     "tracer": "~0.7.3",
     "underscore": "^1.7.0",
     "uuid": "^1.4.1",
