--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-yaml": "~3.1.0",
     "jwt-simple": "~0.2.0",
     "moment": "^2.8.1",
+    "moment-duration-format": "^1.3.0",
     "mongoskin": "~0.6.0",
     "node-xlsx": "^0.5.1",
     "passport": "~0.2.0",
