--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "errorhandler": "~1.1.1",
     "express": "~4.6.1",
     "express-di": "^4.1.1",
+    "express-domain-middleware": "^0.1.0",
     "express-namespace": "~0.1.1",
     "express-session": "~1.7.0",
     "han": "0.0.7",
@@ -30,6 +31,7 @@
     "passport-local": "~1.0.0",
     "point-in-polygon": "0.0.0",
     "qiniu": "~6.1.5",
+    "raygun": "^0.5.0",
     "redis": "~0.11.0",
     "request": "^2.39.0",
     "temp": "^0.8.1",
