--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-namespace": "~0.1.1",
     "express-session": "~1.7.0",
     "han": "0.0.7",
+    "humanize-duration": "^2.3.0",
     "jade": "~1.5.0",
     "js-yaml": "~3.1.0",
     "jwt-simple": "~0.2.0",
