--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "humanize-duration": "^2.3.0",
     "jade": "~1.5.0",
     "js-yaml": "~3.1.0",
+    "jssha": "^1.5.0",
     "jwt-simple": "~0.2.0",
     "moment": "^2.8.1",
     "moment-duration-format": "^1.3.0",
